--- a/custombotpress.css
+++ b/custombotpress.css
@@ -1,39 +1,19 @@
-.botpress__side-internal {
-  background-color: rgb(0, 0, 0);
-  border: 1px solid rgba(0, 0, 0, .3);
+
+
+.body  {
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
- 
-.botpress__side-external .botpress__side-internal .botpress__side-header {
-  border-bottom: 2px solid #fff;
+
+.bpw-from-user .bpw-chat-bubble  {
+  background-color: #3385ff;
+  color: #FFF;
 }
 
 .bpw-from-bot .bpw-chat-bubble {
-  color: #AAA;
+  background-color: #FFF;
+  color: #444;
 }
- 
-.botpress__side-header-bot-name,
-.botpress__message-date,
-.botpress__side-item-name,
-.botpress__side-internal .botpress__side-header .botpress__toggle-convos-button i,
-.botpress__side-internal .botpress__side-header .botpress__close-button i {
-  color: #fff;
-}
- 
-.botpress__side-conversation,
-.botpress__side-header,
-.botpress__convos-list {
-  background-color: rgba(0, 0, 0, .3);
-}
- 
-.botpress__side-external .botpress__side-internal .botpress__side-conversation .botpress__side-conversation-bottom .botpress__side-new-message {
-  background-color: transparent;
-}
- 
-.botpress__side-external .botpress__side-item-right .botpress__side-item-title .botpress__side-item-date span,
-.botpress__side-external .botpress__side-internal .botpress__convos-list .botpress__convo-item .botpress__side-item-right .botpress__side-item-text {
-  color: #000;
-}
- 
-.botpress__side-external .botpress__side-internal .botpress__convos-list .botpress__convo-item:hover {
-  background-color: rgba(0, 0, 0, .35);
+
+.bpw-chat-bubble  {
+  border-radius:  10px;
 }
