--- a/custombotpress.css
+++ b/custombotpress.css
@@ -1,12 +1,12 @@
 
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 .body  {
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
-  color: #fd5d93;
-  font-weight: bold;
+  color: #00f2c3;
 }
 
 .bpw-header-name {
