--- a/custombotpress.css
+++ b/custombotpress.css
@@ -1,8 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@font-face {
+  font-family: 'Poppins';
+  src: url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+}
 
 .body  {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Poppins' !important;
 }
 
 a {
