--- a/custombotpress.css
+++ b/custombotpress.css
@@ -4,9 +4,12 @@
   src: url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 }
 
-.body  {
-  font-family: 'Poppins' !important;
+
+@font-face {
+  font-family: 'Cutive Mono';
+  src: url('https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap');
 }
+
 
 a {
   color: #00f2c3;
@@ -33,7 +36,7 @@ a {
 .bpw-from-bot .bpw-chat-bubble {
   background-color: #FFF;
   color: #333;
-  font-family: 'Poppins';
+  font-family: 'Cutive Mono';
 }
 
 .bpw-chat-bubble  {
