background of selected items

--- a/modern.css
+++ b/modern.css
@@ -67,6 +67,11 @@ a {
   color: #419ef9; 
 }
 
+.css-xwjg1b {
+  background-color: #419ef9;
+  color: #fff;
+}
+
 .bpw-composer textarea{
   margin-bottom: 0;
 }
