--- a/modern.css
+++ b/modern.css
@@ -53,7 +53,7 @@ a {
 }
 
 .bpw-from-bot .bpw-chat-bubble {
-  background-color: #fff;
+  background-color: #eee;
   border-color: #ddd;
   color: #333;
   font-size: 11pt;
