--- a/modern.css
+++ b/modern.css
@@ -59,6 +59,7 @@ a {
   background-color: #419ef9;
   border-color: #419ef9;
   color: #FFF;
+  font-size: 2vw;
   font-family: 'Poppins', sans-serif;
   border-radius: 10px 0px 10px 10px;
 }
@@ -67,6 +68,7 @@ a {
   background-color: #fcfcfc;
   border-color: #ddd;
   color: #333;
+  font-size: 2vw;
   font-family: 'Poppins', sans-serif;
   border-radius: 0px 10px 10px 10px;
 }
