--- a/modern.css
+++ b/modern.css
@@ -107,7 +107,7 @@ a {
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-device-width : 640px) {
   .bpw-from-bot .bpw-chat-bubble {
     font-size: 25px;
   }
