--- a/modern.css
+++ b/modern.css
@@ -126,6 +126,15 @@ a {
 }
 
 @media only screen and (max-device-width : 640px) {
+  svg[Attributes Style] {
+    height: 25;
+  }
+  .bpw-header-name {
+    font-size: 40px;
+  }
+  .bpw-header-subtitle {
+    font-size: 20px;
+  }
   .bpw-from-bot .bpw-chat-bubble {
     font-size: 35px;
   }
