--- a/modern.css
+++ b/modern.css
@@ -126,8 +126,12 @@ a {
 }
 
 @media only screen and (max-device-width : 640px) {
-  svg[Attributes Style] {
-    height: 25;
+  .bpw-header-icon {
+    height: 80;
+  }
+  .bpw-bot-avatar img, .bpw-bot-avatar svg {
+    height: 75px;
+    width: 75px;
   }
   .bpw-header-container {
     height: 90px;
