--- a/modern.css
+++ b/modern.css
@@ -139,6 +139,7 @@ div:has(> .css-10nd86i) {
   .bpw-header-icon {
     width: 40px;
     height: 40px;
+    font-size: 40px;
   }
   .bpw-header-icon-close {
     margin-right: 25px;
