--- a/modern.css
+++ b/modern.css
@@ -23,10 +23,6 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-.bpw-layout {
-  max-height: 750px;
-}
-
 a {
   color: #00f2c3;
 }
@@ -113,6 +109,12 @@ div:has(> .css-10nd86i) {
 
 .bpw-composer textarea{
   margin-bottom: 0;
+}
+
+@media only screen and (min-device-width : 900px) {
+  .bpw-layout {
+    max-height: 750px;
+  }
 }
 
 @media only screen and (max-device-width : 900px) {
